#include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})

# hw2
#add_executable(
#        hw2_jiyoon
#        hw/hw2_jiyoon_test.cpp
#        ../hw/hw2/hw2_jiyoon.cpp
#        ../hw/hw2/NormalMemtable.cpp
#        ../hw/hw2/DelayMemtable.cpp
#)
#
#target_link_libraries(hw2_jiyoon gtest gtest_main)
#
#add_executable(hw1_test
#        hw/hw_merge/hw1_test.cpp
#        ../hw/hw_merge/hw1.cpp
#)
#
#target_link_libraries(hw1_test gtest gtest_main)
#
#add_executable(hw1_haena_test
#        hw/hw1_haena_test.cpp
#        ../hw/hw1_haena.cpp
#
#)
#
#target_link_libraries(hw1_haena_test gtest gtest_main)
#
#add_executable(hw_lsm
#        hw/hw1_jiyun_test.cpp
#        ../hw/hw1_jiyoon.cpp
#)
#
#target_link_libraries(hw_lsm gtest gtest_main)
#
#add_executable(hw_kng
#        hw/hw1_nagyeong.cpp
#        ../hw/hw1_nagyeongLSM.cpp
#)
#
#target_link_libraries(hw_kng gtest gtest_main)

